NetworkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: foo
  name: deny-namespaces
spec:
  podSelector:
    matchLabels:
  ingress:
  - from:
    - podSelector: {}
    - ipBlock:
        cidr: 10.244.189.0/32
    - ipBlock:
        cidr: 10.244.162.0/32
    - ipBlock:
        cidr: 10.244.138.0/32
    - ipBlock:
        cidr: 10.244.132.64/32
    - ipBlock:
        cidr: 10.244.155.192/32
    - ipBlock:
        cidr: 10.244.23.0/32
    - ipBlock:
        cidr: 10.244.255.192/32
    - ipBlock:
        cidr: 10.244.246.64/32
    - ipBlock:
        cidr: 10.244.97.192/32
    - ipBlock:
        cidr: 10.244.188.128/32
    - ipBlock:
        cidr: 10.244.7.0/32
    - ipBlock:
        cidr: 10.244.10.64/32
    - ipBlock:
        cidr: 10.244.245.192/32
    - ipBlock:
        cidr: 10.244.157.64/32
    - ipBlock:
        cidr: 10.244.217.0/32
    - ipBlock:
        cidr: 10.244.158.64/32
    - ipBlock:
        cidr: 10.244.232.0/32
    - ipBlock:
        cidr: 10.244.69.0/32
    - ipBlock:
        cidr: 10.244.149.192/32
    - ipBlock:
        cidr: 10.244.132.128/32
    - ipBlock:
        cidr: 10.244.92.0/32
    - ipBlock:
        cidr: 10.244.235.0/32
    - ipBlock:
        cidr: 10.244.19.64/32
    - ipBlock:
        cidr: 10.244.70.0/32
    - ipBlock:
        cidr: 10.244.249.64/32
    - ipBlock:
        cidr: 10.244.252.128/32
    - ipBlock:
        cidr: 10.244.148.64/32
    - ipBlock:
        cidr: 10.244.106.64/32
    - ipBlock:
        cidr: 10.244.30.192/32
    - ipBlock:
        cidr: 10.244.111.192/32
    - ipBlock:
        cidr: 10.244.170.128/32
    - ipBlock:
        cidr: 10.244.148.192/32
    - ipBlock:
        cidr: 10.244.117.128/32
    - ipBlock:
        cidr: 10.244.126.64/32
    - ipBlock:
        cidr: 10.244.149.64/32
    - ipBlock:
        cidr: 10.244.205.128/32
    - ipBlock:
        cidr: 10.244.9.64/32
    - ipBlock:
        cidr: 10.244.94.192/32
    - ipBlock:
        cidr: 10.244.1.0/32
    - ipBlock:
        cidr: 10.244.58.128/32
    - ipBlock:
        cidr: 10.244.38.128/32
    - ipBlock:
        cidr: 10.244.235.192/32
    - ipBlock:
        cidr: 10.244.195.64/32
    - ipBlock:
        cidr: 10.244.216.128/32
    - ipBlock:
        cidr: 10.244.106.128/32
    - ipBlock:
        cidr: 10.244.227.128/32
    - ipBlock:
        cidr: 10.244.249.128/32
    - ipBlock:
        cidr: 10.244.42.128/32
    - ipBlock:
        cidr: 10.244.216.64/32
    - ipBlock:
        cidr: 10.244.220.64/32
    - ipBlock:
        cidr: 10.244.194.192/32
    - ipBlock:
        cidr: 10.244.138.64/32
    - ipBlock:
        cidr: 10.244.231.128/32
    - ipBlock:
        cidr: 10.244.62.128/32
    - ipBlock:
        cidr: 10.244.177.0/32
    - ipBlock:
        cidr: 10.244.219.128/32
    - ipBlock:
        cidr: 10.244.149.0/32
    - ipBlock:
        cidr: 10.244.5.128/32
    - ipBlock:
        cidr: 10.244.209.0/32
    - ipBlock:
        cidr: 10.244.20.192/32
    - ipBlock:
        cidr: 10.244.120.128/32
    - ipBlock:
        cidr: 10.244.240.192/32
    - ipBlock:
        cidr: 10.244.228.0/32
    - ipBlock:
        cidr: 10.244.167.0/32
    - ipBlock:
        cidr: 10.244.19.128/32
    - ipBlock:
        cidr: 10.244.6.0/32
    - ipBlock:
        cidr: 10.244.118.128/32
    - ipBlock:
        cidr: 10.244.114.0/32
    - ipBlock:
        cidr: 10.244.159.192/32
    - ipBlock:
        cidr: 10.244.114.64/32
    - ipBlock:
        cidr: 10.244.176.0/32
    - ipBlock:
        cidr: 10.244.24.64/32
    - ipBlock:
        cidr: 10.244.47.192/32
    - ipBlock:
        cidr: 10.244.155.128/32
    - ipBlock:
        cidr: 10.244.8.192/32
    - ipBlock:
        cidr: 10.244.77.64/32
    - ipBlock:
        cidr: 10.244.67.128/32
    - ipBlock:
        cidr: 10.244.199.128/32
    - ipBlock:
        cidr: 10.244.14.192/32
    - ipBlock:
        cidr: 10.244.21.64/32
    - ipBlock:
        cidr: 10.244.213.128/32
    - ipBlock:
        cidr: 10.244.168.64/32
    - ipBlock:
        cidr: 10.244.69.128/32
    - ipBlock:
        cidr: 10.244.195.128/32
    - ipBlock:
        cidr: 10.244.171.64/32
    - ipBlock:
        cidr: 10.244.109.0/32
    - ipBlock:
        cidr: 10.244.154.128/32
    - ipBlock:
        cidr: 10.244.251.192/32
    - ipBlock:
        cidr: 10.244.117.64/32
    - ipBlock:
        cidr: 10.244.17.128/32
    - ipBlock:
        cidr: 10.244.108.192/32
    - ipBlock:
        cidr: 10.244.189.128/32
    - ipBlock:
        cidr: 10.244.29.192/32
    - ipBlock:
        cidr: 10.244.195.192/32
    - ipBlock:
        cidr: 10.244.183.64/32
    - ipBlock:
        cidr: 10.244.254.128/32
    - ipBlock:
        cidr: 10.244.204.128/32
    - ipBlock:
        cidr: 10.244.36.128/32
    - ipBlock:
        cidr: 10.244.84.0/32
    - ipBlock:
        cidr: 10.244.197.128/32
    - ipBlock:
        cidr: 10.244.146.0/32
    - ipBlock:
        cidr: 10.244.136.192/32
    - ipBlock:
        cidr: 10.244.65.128/32
    - ipBlock:
        cidr: 10.244.35.128/32
    - ipBlock:
        cidr: 10.244.224.64/32
    - ipBlock:
        cidr: 10.244.45.192/32
    - ipBlock:
        cidr: 10.244.71.128/32
    - ipBlock:
        cidr: 10.244.59.192/32
    - ipBlock:
        cidr: 10.244.253.0/32
    - ipBlock:
        cidr: 10.244.0.128/32
    - ipBlock:
        cidr: 10.244.219.64/32
    - ipBlock:
        cidr: 10.244.158.192/32
    - ipBlock:
        cidr: 10.244.13.0/32
    - ipBlock:
        cidr: 10.244.60.0/32
    - ipBlock:
        cidr: 10.244.104.192/32
    - ipBlock:
        cidr: 10.244.211.0/32
    - ipBlock:
        cidr: 10.244.56.192/32
    - ipBlock:
        cidr: 10.244.30.128/32
    - ipBlock:
        cidr: 10.244.181.0/32
    - ipBlock:
        cidr: 10.244.254.64/32
    - ipBlock:
        cidr: 10.244.220.128/32
    - ipBlock:
        cidr: 10.244.31.0/32
    - ipBlock:
        cidr: 10.244.150.0/32
    - ipBlock:
        cidr: 10.244.119.64/32
    - ipBlock:
        cidr: 10.244.121.128/32
    - ipBlock:
        cidr: 10.244.252.0/32
    - ipBlock:
        cidr: 10.244.181.128/32
    - ipBlock:
        cidr: 10.244.160.192/32
    - ipBlock:
        cidr: 10.244.211.192/32
    - ipBlock:
        cidr: 10.244.229.64/32
    - ipBlock:
        cidr: 10.244.68.64/32
    - ipBlock:
        cidr: 10.244.43.192/32
    - ipBlock:
        cidr: 10.244.136.64/32
    - ipBlock:
        cidr: 10.244.151.128/32
    - ipBlock:
        cidr: 10.244.112.64/32
    - ipBlock:
        cidr: 10.244.210.0/32
    - ipBlock:
        cidr: 10.244.233.192/32
    - ipBlock:
        cidr: 10.244.244.64/32
    - ipBlock:
        cidr: 10.244.99.128/32
    - ipBlock:
        cidr: 10.244.165.0/32
    - ipBlock:
        cidr: 10.244.124.192/32
    - ipBlock:
        cidr: 10.244.191.0/32
    - ipBlock:
        cidr: 10.244.176.128/32
    - ipBlock:
        cidr: 10.244.226.64/32
    - ipBlock:
        cidr: 10.244.32.0/32
    - ipBlock:
        cidr: 10.244.9.192/32
    - ipBlock:
        cidr: 10.244.174.128/32
    - ipBlock:
        cidr: 10.244.184.192/32
    - ipBlock:
        cidr: 10.244.248.192/32
    - ipBlock:
        cidr: 10.244.34.64/32
    - ipBlock:
        cidr: 10.244.215.64/32
    - ipBlock:
        cidr: 10.244.220.0/32
    - ipBlock:
        cidr: 10.244.222.128/32
    - ipBlock:
        cidr: 10.244.200.64/32
    - ipBlock:
        cidr: 10.244.141.64/32
    - ipBlock:
        cidr: 10.244.37.0/32
    - ipBlock:
        cidr: 10.244.124.64/32
    - ipBlock:
        cidr: 10.244.156.0/32
    - ipBlock:
        cidr: 10.244.14.128/32
    - ipBlock:
        cidr: 10.244.206.128/32
    - ipBlock:
        cidr: 10.244.135.0/32
    - ipBlock:
        cidr: 10.244.12.64/32
    - ipBlock:
        cidr: 10.244.113.192/32
    - ipBlock:
        cidr: 10.244.171.192/32
    - ipBlock:
        cidr: 10.244.140.0/32
    - ipBlock:
        cidr: 10.244.194.64/32
    - ipBlock:
        cidr: 10.244.161.0/32
    - ipBlock:
        cidr: 10.244.149.128/32
    - ipBlock:
        cidr: 10.244.124.128/32
    - ipBlock:
        cidr: 10.244.77.192/32
    - ipBlock:
        cidr: 10.244.187.64/32
    - ipBlock:
        cidr: 10.244.229.192/32
    - ipBlock:
        cidr: 10.244.190.0/32
    - ipBlock:
        cidr: 10.244.18.128/32
    - ipBlock:
        cidr: 10.244.178.64/32
    - ipBlock:
        cidr: 10.244.129.64/32
    - ipBlock:
        cidr: 10.244.242.64/32
    - ipBlock:
        cidr: 10.244.158.128/32
    - ipBlock:
        cidr: 10.244.213.192/32
    - ipBlock:
        cidr: 10.244.9.128/32
    - ipBlock:
        cidr: 10.244.82.192/32
    - ipBlock:
        cidr: 10.244.204.0/32
    - ipBlock:
        cidr: 10.244.236.0/32
    - ipBlock:
        cidr: 10.244.201.0/32
    - ipBlock:
        cidr: 10.244.213.64/32
    - ipBlock:
        cidr: 10.244.96.64/32
    - ipBlock:
        cidr: 10.244.118.192/32
    - ipBlock:
        cidr: 10.244.86.64/32
    - ipBlock:
        cidr: 10.244.94.64/32
    - ipBlock:
        cidr: 10.244.180.192/32
    - ipBlock:
        cidr: 10.244.141.192/32
    - ipBlock:
        cidr: 10.244.196.0/32
    - ipBlock:
        cidr: 10.244.247.64/32
    - ipBlock:
        cidr: 10.244.189.64/32
    - ipBlock:
        cidr: 10.244.233.64/32
    - ipBlock:
        cidr: 10.244.252.64/32
    - ipBlock:
        cidr: 10.244.217.64/32
    - ipBlock:
        cidr: 10.244.79.128/32
    - ipBlock:
        cidr: 10.244.178.128/32
    - ipBlock:
        cidr: 10.244.251.0/32
    - ipBlock:
        cidr: 10.244.40.128/32
    - ipBlock:
        cidr: 10.244.172.0/32
    - ipBlock:
        cidr: 10.244.225.192/32
    - ipBlock:
        cidr: 10.244.228.64/32
    - ipBlock:
        cidr: 10.244.82.128/32
    - ipBlock:
        cidr: 10.244.166.64/32
    - ipBlock:
        cidr: 10.244.3.192/32
    - ipBlock:
        cidr: 10.244.91.64/32
    - ipBlock:
        cidr: 10.244.242.192/32
    - ipBlock:
        cidr: 10.244.208.64/32
    - ipBlock:
        cidr: 10.244.176.192/32
    - ipBlock:
        cidr: 10.244.16.64/32
    - ipBlock:
        cidr: 10.244.80.0/32
    - ipBlock:
        cidr: 10.244.229.128/32
    - ipBlock:
        cidr: 10.244.2.128/32
    - ipBlock:
        cidr: 10.244.230.0/32
    - ipBlock:
        cidr: 10.244.222.192/32
    - ipBlock:
        cidr: 10.244.73.192/32
    - ipBlock:
        cidr: 10.244.238.0/32
    - ipBlock:
        cidr: 10.244.148.128/32
    - ipBlock:
        cidr: 10.244.100.192/32
    - ipBlock:
        cidr: 10.244.55.192/32
    - ipBlock:
        cidr: 10.244.17.192/32
    - ipBlock:
        cidr: 10.244.16.128/32
    - ipBlock:
        cidr: 10.244.30.64/32
    - ipBlock:
        cidr: 10.244.122.192/32
    - ipBlock:
        cidr: 10.244.142.0/32
    - ipBlock:
        cidr: 10.244.60.64/32
    - ipBlock:
        cidr: 10.244.97.0/32
    - ipBlock:
        cidr: 10.244.28.192/32
    - ipBlock:
        cidr: 10.244.10.128/32
    - ipBlock:
        cidr: 10.244.53.128/32
    - ipBlock:
        cidr: 10.244.163.192/32
    - ipBlock:
        cidr: 10.244.191.64/32
    - ipBlock:
        cidr: 10.244.28.128/32
    - ipBlock:
        cidr: 10.244.27.128/32
    - ipBlock:
        cidr: 10.244.14.64/32
    - ipBlock:
        cidr: 10.244.8.64/32
    - ipBlock:
        cidr: 10.244.73.128/32
    - ipBlock:
        cidr: 10.244.183.192/32
    - ipBlock:
        cidr: 10.244.10.192/32
    - ipBlock:
        cidr: 10.244.86.192/32
    - ipBlock:
        cidr: 10.244.101.128/32
    - ipBlock:
        cidr: 10.244.152.128/32
    - ipBlock:
        cidr: 10.244.98.128/32
    - ipBlock:
        cidr: 10.244.192.192/32
    - ipBlock:
        cidr: 10.244.136.128/32
    - ipBlock:
        cidr: 10.244.40.64/32
    - ipBlock:
        cidr: 10.244.173.192/32
    - ipBlock:
        cidr: 10.244.146.128/32
    - ipBlock:
        cidr: 10.244.56.128/32
    - ipBlock:
        cidr: 10.244.60.128/32
    - ipBlock:
        cidr: 10.244.88.192/32
    - ipBlock:
        cidr: 10.244.101.192/32
    - ipBlock:
        cidr: 10.244.231.64/32
    - ipBlock:
        cidr: 10.244.189.192/32
    - ipBlock:
        cidr: 10.244.81.0/32
